--- a/test.html
+++ b/test.html
@@ -5,10 +5,11 @@
     </head>
     <body>
         <div id="d1">
-            S
+            页面载入后,会异步插入10个A的超链接,10个B的超链接.
+            等这两个都执行完毕后, 所有的超链接会被更改为 C. <br />
         </div>
 
         <script type="text/javascript" src="promise.js"></script>
-        <script type="text/javascript" src="helper.js"></script>
+        <script type="text/javascript" src="test.js"></script>
     </body>
 </html>
